--- a/arkivskaber-open.html
+++ b/arkivskaber-open.html
@@ -302,7 +302,10 @@
                                   </tr>
                                 </thead>
                                 <tbody>
-                                  <tr class="clickable-row" data-href="#target">
+                                  <tr
+                                    class="clickable-row"
+                                    data-href="#heuristiskeenhed-modal"
+                                  >
                                     <td>Ordensmagt Røverier</td>
                                     <td>
                                       sh001
@@ -605,358 +608,33 @@
                   </div>
                 </div>
               </div>
-
-              <!-- gem
-              <div class="row mt-6">
-                <div class="col-sm-12">
-                  <h3 class="font-weight-bold">Navne</h3>
-                  <div class="card bg-white mt-3">
-                    <div class="dataTables_scroll">
-                      <table
-                        id=""
-                        class="table tabledisplay table-hover table-striped"
-                        width="100%"
-                      >
-                        <thead>
-                          <tr>
-                            <th scope="col">Navn</th>
-                            <th scope="col">Fra</th>
-                            <th scope="col">Til</th>
-                            <th scope="col">Arkivlovstype</th>
-                          </tr>
-                        </thead>
-
-                        <tbody>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>frb Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1955</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1921</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-8">
-                <div class="col-sm-12">
-                  <div class="d-flex align-items-center mb-4">
-                    <h3 class="mb-0 font-weight-bold">Heuristiske Enheder</h3>
-                    <button
-                      class="btn btn-outline-primary ml-3"
-                      data-toggle="modal"
-                      data-target="#redigerArkivskaber"
-                    >
-                      <span>+ Ny HE</span>
-                    </button>
-                  </div>
-                  <div class="card bg-white mt-3">
-                    <table
-                      id=""
-                      width="100%"
-                      class="table tabledisplay table-hover mb-0 table-striped"
-                    >
-                      <thead>
-                        <tr>
-                          <th scope="col">Navn</th>
-                          <th scope="col">Sorteringsfelt</th>
-                          <th scope="col">Yderår</th>
-                          <th scope="col">Type</th>
-                          <th scope="col">Undertype</th>
-                          <th scope="col">E-nummer</th>
-                          <th scope="col">Beskrivelsesniveau</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr class="clickable-row">
-                          <td>Ordensmagt Røverier</td>
-                          <td>
-                            sh001
-                          </td>
-                          <td>1987-1988</td>
-                          <td>Komponent</td>
-                          <td>ut</td>
-                          <td>0</td>
-                          <td>2. niveau</td>
-                        </tr>
-                        <tr class="clickable-row">
-                          <td>Ordensmagt Røverier</td>
-                          <td>
-                            sh001
-                          </td>
-                          <td>1987-1988</td>
-                          <td>Komponent</td>
-                          <td>ut</td>
-                          <td>0</td>
-                          <td>2. niveau</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-8">
-                <div class="col-sm-6">
-                  <h3 class="font-weight-bold mb-4">Interne noter</h3>
-                  <p>
-                    Oversigt. Udskrive slides, noter eller uddelingskopier Du er
-                    færdig med at oprette din præsentation og vil nu udskrive
-                    uddelingskopier til dit publikum.
-                  </p>
-                  <button class="btn btn-outline-primary">Rediger</button>
-                </div>
-                <div class="col-sm-6">
-                  <h3 class="font-weight-bold mb-4">Publikums noter</h3>
-                  <p>
-                    Oversigt. Udskrive slides, noter eller uddelingskopier Du er
-                    færdig med at oprette din præsentation og vil nu udskrive
-                    uddelingskopier til dit publikum.
-                  </p>
-                  <button class="btn btn-outline-primary">Rediger</button>
-                </div>
-              </div>
-              <div class="row mt-8">
-                <div class="col-sm-6">
-                  <h3 class="font-weight-bold">Overordnede aktører</h3>
-                  <div class="card bg-white mt-3">
-                    <table
-                      id=""
-                      class="table tabledisplay table-hover table-striped"
-                      width="100%"
-                    >
-                      <thead>
-                        <tr>
-                          <th scope="col">Navn</th>
-                          <th scope="col">Fra</th>
-                          <th scope="col">Til</th>
-                          <th scope="col">Arkivlovstype</th>
-                        </tr>
-                      </thead>
-
-                      <tbody>
-                        <tr
-                          class="clickable-row"
-                          data-href="/arkivskaber-open.html"
-                        >
-                          <td>Frederiksberg Politi</td>
-                          <td>1972</td>
-                          <td>1988</td>
-                          <td>Officielt</td>
-                        </tr>
-                        <tr
-                          class="clickable-row"
-                          data-href="/arkivskaber-open.html"
-                        >
-                          <td>Frederiksberg Politi</td>
-                          <td>1972</td>
-                          <td>1988</td>
-                          <td>Officielt</td>
-                        </tr>
-                        <tr
-                          class="clickable-row"
-                          data-href="/arkivskaber-open.html"
-                        >
-                          <td>Frederiksberg Politi</td>
-                          <td>1972</td>
-                          <td>1988</td>
-                          <td>Officielt</td>
-                        </tr>
-                        <tr
-                          class="clickable-row"
-                          data-href="/arkivskaber-open.html"
-                        >
-                          <td>Frederiksberg Politi</td>
-                          <td>1972</td>
-                          <td>1988</td>
-                          <td>Officielt</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <h3 class="font-weight-bold">Underordnede aktører</h3>
-                  <div class="card bg-white mt-3">
-                    <div class="dataTables_scroll">
-                      <table
-                        id=""
-                        class="table tabledisplay table-hover table-striped"
-                        width="100%"
-                      >
-                        <thead>
-                          <tr>
-                            <th scope="col">Navn</th>
-                            <th scope="col">Fra</th>
-                            <th scope="col">Til</th>
-                            <th scope="col">Arkivlovstype</th>
-                          </tr>
-                        </thead>
-
-                        <tbody>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                          <tr
-                            class="clickable-row"
-                            data-href="/arkivskaber-open.html"
-                          >
-                            <td>Frederiksberg Politi</td>
-                            <td>1972</td>
-                            <td>1988</td>
-                            <td>Officielt</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            --></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Modal -->
+    <!-- Heuristik Enhed Modal -->
     <div
       class="modal fade"
-      id="redigerArkivskaber"
+      id="heuristiskeenhed-modal"
       tabindex="-1"
       role="dialog"
-      aria-labelledby="exampleModalLabel"
+      aria-labelledby="heuristiskeenhed-modal"
       aria-hidden="true"
     >
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Rediger Arkivskaber
+            <span class="badge badge-success badge-pill mt-3 mb-4"
+              >Heuristisk enhed</span
+            >
+            <h1 class="font-weight-extrabold">Ordensmagt Røverier</h1>
+            <h3 class="text-secondary">Ordenspolitiet, 1919 - 2006</h3>
+            <h5 class="mt-4 mb-1 text-secondary">
+              Type:
+              Komponent&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Undertype:
+              Ja&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Kladde:
+              Ja&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Kasseret: Nej
             </h5>
             <button
               type="button"
@@ -968,11 +646,11 @@
             </button>
           </div>
           <div class="modal-body">
-            redigerings felter
+            tekst
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">
-              Gem
+              Luk
             </button>
           </div>
         </div>
@@ -982,6 +660,7 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <link
       rel="stylesheet"
       type="text/css"
