--- a/search/search-arkivskaber.html
+++ b/search/search-arkivskaber.html
@@ -71,7 +71,7 @@
               <form action="search/arkivskaber.html">
                 <div class="container-fluid">
                   <div class="row mb-3">
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <label for="navn">Navn</label>
                       <input
                         type="text"
@@ -81,34 +81,22 @@
                       />
                     </div>
                     <div class="col-sm-3">
-                      <label for="praefiks">Præfiks</label>
+                      <label for="emne">Emne</label>
                       <input
                         type="text"
                         class="form-control bg-light"
-                        id="praefiks"
+                        id="emne"
                       />
                     </div>
-                    <div class="col-sm-2">
-                      <label for="til">Til</label>
+                    <div class="col-sm-3">
+                      <label for="geografi">Geografi</label>
                       <input
                         type="text"
                         class="form-control bg-light"
-                        value="1972"
-                        id="til"
+                        id="geografi"
                       />
                     </div>
-                    <div class="col-sm-2">
-                      <label for="fra">Fra</label>
-                      <input
-                        type="text"
-                        class="form-control bg-light"
-                        value="1988"
-                        id="fra"
-                      />
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-sm-4 mb-3">
+                    <div class="col-sm-3 mb-3">
                       <label for="proveniensnr">Proveniens-nr.</label>
                       <input
                         type="text"
@@ -149,7 +137,6 @@
                       <th scope="col">Præfiks</th>
                       <th scope="col">Fra</th>
                       <th scope="col">Til</th>
-                      <th scope="col">Proviensnr</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -163,106 +150,72 @@
                       </td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>12415DJJ</td>
                     </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
+                    <tr
+                      class="clickable-row"
+                      data-href="../arkivskaber-open.html"
+                    >
+                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>12415DJJ</td>
                     </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
+                    <tr
+                      class="clickable-row"
+                      data-href="../arkivskaber-open.html"
+                    >
+                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>12415DJJ</td>
                     </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
+                    <tr
+                      class="clickable-row"
+                      data-href="../arkivskaber-open.html"
+                    >
+                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>12415DJJ</td>
                     </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
+                    <tr
+                      class="clickable-row"
+                      data-href="../arkivskaber-open.html"
+                    >
+                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>12415DJJ</td>
                     </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
+                    <tr
+                      class="clickable-row"
+                      data-href="../arkivskaber-open.html"
+                    >
+                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>12415DJJ</td>
                     </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
+                    <tr
+                      class="clickable-row"
+                      data-href="../arkivskaber-open.html"
+                    >
+                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>12415DJJ</td>
-                    </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                      <td>12415DJJ</td>
-                    </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                      <td>12415DJJ</td>
-                    </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                      <td>12415DJJ</td>
-                    </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                      <td>12415DJJ</td>
-                    </tr>
-                    <tr class="clickable-row">
-                      <td>Frederiksberg Politi</td>
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                      <td>12415DJJ</td>
                     </tr>
                   </tbody>
                 </table>
