--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   aria-labelledby="arkivskaber-tab"
                 >
                   <!-- arkivskaber start -->
-                  <form action="search/arkivskaber.html">
+                  <form action="search/search-arkivskaber.html">
                     <div class="container-fluid">
                       <div class="row mb-3">
                         <div class="col-sm-12">
@@ -142,37 +142,29 @@
                       </div>
                       <div class="row mb-3">
                         <div class="col-sm-6">
-                          <label for="praefiks">Præfiks</label>
+                          <label for="emne">Emne</label>
                           <input
                             type="text"
                             class="form-control bg-light"
-                            id="praefiks"
+                            id="emne"
                           />
                         </div>
                         <div class="col-sm-6">
+                          <label for="geografi">Geografi</label>
+                          <input
+                            type="text"
+                            class="form-control bg-light"
+                            id="geografi"
+                          />
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-12">
                           <label for="proveniensnr">Proveniens nr.</label>
                           <input
                             type="text"
                             class="form-control bg-light"
                             id="proveniensnr"
-                          />
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="col-sm-6">
-                          <label for="til">Til</label>
-                          <input
-                            type="text"
-                            class="form-control bg-light"
-                            id="til"
-                          />
-                        </div>
-                        <div class="col-sm-6">
-                          <label for="fra">Fra</label>
-                          <input
-                            type="text"
-                            class="form-control bg-light"
-                            id="fra"
                           />
                         </div>
                       </div>
@@ -229,6 +221,16 @@
                             type="text"
                             class="form-control form-control-lg bg-light"
                             id="navn"
+                          />
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-12">
+                          <label for="arkivskaber">Arkivskaber</label>
+                          <input
+                            type="text"
+                            class="form-control bg-light"
+                            id="arkivskaber"
                           />
                         </div>
                       </div>
